--- a/src/main/resources/templates/editor.html
+++ b/src/main/resources/templates/editor.html
@@ -19,11 +19,11 @@
             <form th:action="@{/note/edit}" method="post" class="edit-note-form px-5">
                 <div class="mb-3">
                     <label for="title">Title</label>
-                    <input class="form-control" name="title" id="title" th:value="${editNote.title}" required>
+                    <input class="form-control" name="title" id="title" minlength="3" maxlength="255" th:value="${editNote.title}" required>
                 </div>
                 <div class="mb-3">
                     <label for="content">Content</label>
-                    <textarea class="form-control" rows="5" name="content" id="content" th:text="${editNote.content}" required></textarea>
+                    <textarea class="form-control" rows="5" name="content" id="content" maxlength="2000" th:text="${editNote.content}" required></textarea>
                 </div>
                 <div class="d-grid justify-content-md-end">
                     <input type="hidden" name="id" th:value="${editNote?.id}">
