--- a/src/main/resources/templates/notes.html
+++ b/src/main/resources/templates/notes.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="col-6 justify-content-center text-center">
-            <form th:action="@{/note/list}" method="post" class="create-note-form px-5">
+            <form th:action="@{/note/add}" method="post" class="create-note-form px-5">
                 <h5>Fill the form to add a new note</h5>
                 <div class="form-floating mb-3">
                     <input type="text" class="form-control" name="title" id="title" minlength="3" maxlength="255" placeholder="Note title" required>
